@@ -49,10 +49,10 @@ RecM8S( ULONG  size,
 	ULONG* offset,
 	void** dest )
 {
-  Fixed64        offs = (Fixed64) 0;
-  Fixed64        step = (Fixed64) add << 32;
+  Fixed64        offs = 0;
+  Fixed64        step = ((Fixed64) add) << 16;
   struct sample* from = (struct sample*) ((ULONG)src + *offset);
-  BYTE*          to   = (BYTE*) dest;
+  BYTE*          to   = *dest;
   ULONG          i;
 
   for( i = 0; i < size; ++i )
@@ -73,10 +73,10 @@ RecS8S( ULONG  size,
 	ULONG* offset,
 	void** dest )
 {
-  Fixed64        offs = (Fixed64) 0;
-  Fixed64        step = (Fixed64) add << 32;
+  Fixed64        offs = 0;
+  Fixed64        step = ((Fixed64) add) << 16;
   struct sample* from = (struct sample*) ((ULONG)src + *offset);
-  BYTE*          to   = (BYTE*) dest;
+  BYTE*          to   = *dest;
   ULONG          i;
 
   for( i = 0; i < size; ++i )
@@ -98,10 +98,10 @@ RecM16S( ULONG  size,
 	 ULONG* offset,
 	 void** dest )
 {
-  Fixed64        offs = (Fixed64) 0;
-  Fixed64        step = (Fixed64) add << 32;
+  Fixed64        offs = 0;
+  Fixed64        step = ((Fixed64) add) << 16;
   struct sample* from = (struct sample*) ((ULONG)src + *offset);
-  WORD*          to   = (WORD*) dest;
+  WORD*          to   = *dest;
   ULONG          i;
 
   for( i = 0; i < size; ++i )
@@ -122,10 +122,10 @@ RecS16S( ULONG  size,
 	 ULONG* offset,
 	 void** dest )
 {
-  Fixed64        offs = (Fixed64) 0;
-  Fixed64        step = (Fixed64) add << 32;
+  Fixed64        offs = 0;
+  Fixed64        step = ((Fixed64) add) << 16;
   struct sample* from = (struct sample*) ((ULONG)src + *offset);
-  WORD*          to   = (WORD*) dest;
+  WORD*          to   = *dest;
   ULONG          i;
 
   for( i = 0; i < size; ++i )
@@ -147,10 +147,10 @@ RecM32S( ULONG  size,
 	 ULONG* offset,
 	 void** dest )
 {
-  Fixed64        offs = (Fixed64) 0;
-  Fixed64        step = (Fixed64) add << 32;
+  Fixed64        offs = 0;
+  Fixed64        step = ((Fixed64) add) << 16;
   struct sample* from = (struct sample*) ((ULONG)src + *offset);
-  LONG*          to   = (LONG*) dest;
+  LONG*          to   = *dest;
   ULONG          i;
 
   for( i = 0; i < size; ++i )
@@ -171,10 +171,10 @@ RecS32S( ULONG  size,
 	 ULONG* offset,
 	 void** dest )
 {
-  Fixed64        offs = (Fixed64) 0;
-  Fixed64        step = (Fixed64) add << 32;
+  Fixed64        offs = 0;
+  Fixed64        step = ((Fixed64) add) << 16;
   struct sample* from = (struct sample*) ((ULONG)src + *offset);
-  LONG*          to   = (LONG*) dest;
+  LONG*          to   = *dest;
   ULONG          i;
 
   for( i = 0; i < size; ++i )
